2010-08-29	Chris Johns <chrisj@rtems.org>

	* specbuilder/specbuilder/defaults.py: Add default configure
	macro. Add --dry-run to the parsed arguments. Fix the case when
	run on a new host that does not have default support.
	
2010-08-13	Chris Johns <chrisj@rtems.org>

	* specbuilder/specbuilder/defaults.py: Provide a default shell.

	* specbuilder/specbuilder/rtems.py: Provide a default autoconf
	version.

	* specbuilder/specbuilder/setup.py: Use the default setup shell
	and check the version of autoconf needed.

2010-08-13	Chris Johns <chrisj@rtems.org>

	* specbuilder/specbuilder/setup.py: Add import for execute.

2010-08-13	Chris Johns <chrisj@rtems.org>

	* specbuilder/specbuilder/rtems.py: New. Move RTEMS specific
	settings into the RTEMS specific file from the host specific file.

	* specbuilder/specbuilder/darwin.py: Move the RTEMS specific
	values out. Automatically determine the number of CPUs and let
	make use them all.

	* specbuilder/specbuilder/defaults.py: Add --no-smp and --rebuild
	to the options. Post process --no-smp to set the SMP make flags to
	nil. Add support for RTEMS specific overrides.

	* specbuilder/specbuilder/build.py: Add a notice that building has
	started. If a download happens you do not know when it has
	finished.

	* specbuilder/specbuilder/setup.py: Add --rtems to point to the
	RTEMS source and copy the spec and diff files. Also allow the user
	to --rebuild them.

2010-08-09	Chris Johns <chrisj@rtems.org>

	* specbuilder/perl.prov, specbuilder/perl.req: New.
	* specbuilder/defaults.py: The config.sub path is a sub-dir of the
	command.
	* specbuilder/setup.py: Fix make bug. Install RPMLIB files when
	creating the directory.
	* specbuilder/spec.py: Add '%check'.

2010-08-09	Chris Johns <chrisj@rtems.org>

	* specbuilder, specbuilder/sb-build, specbuilder/sb-crossgcc,
	specbuilder/sb-setup, specbuilder/sb-specdump,
	specbuilder/sb-status, specbuilder/specbuilder/.cvsignore,
	specbuilder/specbuilder/build.py,